<resources>
    <string name="app_name">Direct trade service</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="indie">Indie</string>
    <string name="home_page">Home Page</string>

    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Hello blank fragment Indices</string>
    <string name="pivot">Pivot</string>
    <string name="live_tips">Live Tips</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="market">Market</string>
    <string name="market_watch">Market Watch</string>
    <string name="market_mover">Market Movers</string>
    <string name="portfolio">Portfolio</string>
    <string name="new_high_low">New High Low</string>
    <string name="summary">Summary</string>
    <string name="today_gain_loss">Today Gain/Loss</string>
    <string name="portfolio_worth">Portfolio Worth</string>
    <string name="hold_value">Hold Value</string>
    <string name="market_value">Market Value</string>
    <string name="home">Home</string>
    <string name="trade_n_quote">Trade /Quote</string>
    <string name="news">News</string>
    <string name="trade">Trade</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="binary">Binary</string>
    <string name="setting">Settings</string>
    <string name="alert">Alert</string>
    <string name="crypto">Crypto</string>
    <string name="reports">Reports</string>
    <string name="performance">Performance</string>
    <string name="sports">Sports</string>
    <string name="fx">FX</string>
    <string name="sec_60">60 Sec</string>
    <string name="binary_option">Binary Option</string>
    <string name="binary_n_option">Binary\nOption</string>
    <string name="pairs">Pairs</string>
    <string name="long_term">Long Term</string>
    <string name="long_n_term">Long\nTerm</string>

    <string name="product">Product</string>
    <string name="asset">Asset</string>
    <string name="account">Account</string>
    <string name="exit">Exit</string>
    <string name="select_asset">Select Asset</string>
    <string name="commodities">Commodities</string>
    <string name="asset_list">Asset List</string>

    <string name="rate_info" translatable="false">Underlying asset market Bid/Ask rates as accepted by the platform provider. *Assets that do not have Bid/Ask rates will show the \"last\" rate.</string>
    <!--
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    -->


    <string-array name="exchange">
        <item>Exchange1</item>
        <item>Exchange2</item>
        <item>Exchange3</item>
    </string-array>

    <string-array name="asset">
        <item>Asset1</item>
        <item>Asset2</item>
        <item>Asset3</item>
    </string-array>

    <string-array name="pivot">
        <item>Pivot1</item>
        <item>Pivot2</item>
        <item>Pivot3</item>
    </string-array>
    <string name="title_activity_sport">SportActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sports">SportsActivity</string>


    <string-array name="Member_names">
        <item>Other</item>
    </string-array>


    <array name="profile_pics">
        <item>@drawable/circle</item>

    </array>


    <!-- Status -->
    <string-array name="statues">
        <item>Welcome! Thank you for choosing<br> DTS.Use your ID to get notification fromMQL5 Community and Expert Advisors</br></item>

    </string-array>

    <!-- contact type -->
    <string-array name="contactType">
        <item>14 February,3:04PM</item>

    </string-array>

    <!-- Names Mailbox -->

    <string-array name="Member_names1">
        <item>DTS Software Corp.</item>
        <item>DTS Software Corp.</item>

    </string-array>

    <!-- Pictures -->
    <array name="profile_pics1">
        <item>@drawable/main</item>
        <item>@drawable/main</item>

    </array>

    <!-- Status -->
    <string-array name="statues1">
        <item>The Built-in Virtual - Roborts and Signals Now Working 24/7</item>
        <item>Order Trading Robots from Freelancers-It IS Fast and Efficient</item>

    </string-array>

    <!-- contact type -->
    <string-array name="contactType1">
        <item>26 Feb 2018</item>
        <item>26 Feb 2018</item>

    </string-array>


    <!-- Names News -->


    <string-array name="Member_names2">
        <item>Custom Strategy Tester based on fast mathematical calculations</item>
        <item>Automatic construction of supports and resistance lines</item>

    </string-array>

    <!-- Pictures -->


    <!-- Status -->
    <string-array name="statues2">
        <item>MQL5 Articles, 2018.02.27 13:31</item>
        <item>MQL5 Articles, 2018.02.27 13:46</item>
        <!--<item>Available</item>-->
        <!--<item>Busy</item>-->
        <!--<item>In a meeting</item>-->
        <!--<item>At work</item>-->
        <!--<item>At gym</item>-->
    </string-array>
    <string name="title_activity_indicators">Indicators</string>
    <string-array name="spinners">
        <item>Administrator |</item>
        <item>Administrator ||</item>
        <item>Complience / Docs</item>
    </string-array>

    <!--//quotes edit-->
    <string-array name="Member_names5">
        <item>NZDUSD</item>
        <item>USDSEK</item>
        <item>USDJPY</item>
        <item>USDCHF</item>
        <item>GBPUSD</item>
        <item>USDRUB</item>
        <item>USDCAD</item>
        <item>EURUSD</item>
        <item>USDCNH</item>

    </string-array>

    <!-- Pictures -->
    <array name="profile_pics5">
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
        <item>@drawable/ic_view_headline_blue_grey_200_18dp</item>
    </array>


    <!-- Status -->
    <string-array name="statues5">
        <item>New Zealand Dollar vs US Dollar</item>
        <item>US Dollar vs Sweden Dollar</item>
        <item>US Dollar vs US Japanese Yen</item>
        <item>US Dollar vs US Swiss Franc</item>
        <item>Great Britain Pound vs US Dollar</item>
        <item>US Dollar vs Russian Ruble</item>
        <item>US Dollar vs canadian Dollar</item>
        <item>Euro vs US Dollar</item>
        <item>US Dollar vs Chinese Yuan</item>


    </string-array>


</resources>
