<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="2dp"
    tools:context="com.affwl.exchange.binary.BinaryBottomFragment">

    <TextView
        android:id="@+id/txtVBHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:text="@string/home"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>

    <View
        android:layout_width="1dp"
        android:background="@color/colorBlackTransperDialog"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/txtVBProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:text="@string/product"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>

    <View
        android:layout_width="1dp"
        android:background="@color/colorBlackTransperDialog"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/txtVBAsset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:text="@string/asset"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>

    <View
        android:layout_width="1dp"
        android:background="@color/colorBlackTransperDialog"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/txtVBTrade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:text="@string/trade"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>

</LinearLayout>
